fix: reduced gap

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,13 +1,12 @@
 .overview {
-  margin-top: 48px;
-  margin-bottom: 48px;
+  margin: 24px auto;
   padding: 0 112px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 48px;
+  gap: 24px;
 }
 
 
